--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dotenvy = "0.15.7"
+dotenvy_macro = "0.15.7"
 rand = "0.8.5"
 reqwest = "0.11.17"
-tokio = "1.28.0"
+serde = "1.0.164"
+tokio = { version = "1.28.2", features = ["full"] }
+vkclient = "4.0.3"
