--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,8 +19,8 @@ jobs:
     - name: 'Create env file'
       run: |
         touch .env
-        echo VK_GROUP_TOKEN="VK_GROUP_TOKEN" >> .env
-        echo VK_USER_TOKEN="VK_USER_TOKEN" >> .env
+        echo VK_GROUP_TOKEN="${{ secrets.VK_GROUP_TOKEN }}" >> .env
+        echo VK_USER_TOKEN="${{ secrets.VK_USER_TOKEN }}" >> .env
     - name: Build
       run: cargo build --verbose
     - name: Run tests
