--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ dotenvy_macro = "0.15.7"
 rand = "0.8.5"
 reqwest = "0.11.17"
 serde = "1.0.164"
+serde_json = "1.0.96"
 tokio = { version = "1.28.2", features = ["full"] }
 vkclient = "4.0.3"
