--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 dotenvy = "0.15.7"
 dotenvy_macro = "0.15.7"
+futures-util = "0.3.28"
 rand = "0.8.5"
 reqwest = "0.11.17"
 serde = "1.0.164"
