--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ dotenvy = "0.15.7"
 dotenvy_macro = "0.15.7"
 futures-util = "0.3.28"
 rand = "0.8.5"
+reqwest = "0.11.18"
 serde = "1.0.164"
 serde_json = "1.0.96"
 tokio = { version = "1.28.2", features = ["full"] }
