--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ rand = "0.8.5"
 reqwest = "0.11.18"
 serde = "1.0.164"
 serde_json = "1.0.96"
+tempdir = "0.3.7"
 tokio = { version = "1.28.2", features = ["full"] }
 vkclient = "4.0.3"
